# nodeman

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  install.sh  nodeman.desktop  t --all -- install.c | xargs -n 1 git grep "isAvaliableDist"
.cache/clangd/index/: arch.c.CA5AA68A9036556E.idx  arch.h.19E72AAFD9009168.idx  change.h.E373D95753C4D688.idx  command.c.4CEC806D89659808.idx  core.h.E22EF57864DD697A.idx  help.c.713D6AA00BD783B4.idx  install.c.FBB327EA64D0AEAD.idx  install.h.D263A4469154AAD4.idx  list.h.7EB4B67F0A4B0E52.idx  log.c.0C87990A6CE08DDC.idx  main.c.A9C3F3B08DE5FE97.idx  print.c.EE4E3216BFDE4E3E.idx  print.h.803E430CAAD55B8C.idx  remove.h.6B4401A796EAFDE6.idx  utils.h.5D2ED22FB743000B.idx
design/: .$install.drawio.bkp  .$prune.drawio.bkp  .$tui.drawio.bkp  .$use.drawio.bkp  doctor.drawio  install.drawio  list.drawio  prune.drawio  remove.drawio  start.drawio  tui.drawio  update.drawio  use.drawio
include/: change.h  install.h  list.h  remove.h
include/nodeman/: README.md  core.h  tui.h  utils.h
include/utils/: arch.h  command.h  distro_detection.h
src/: README.md  change.c  install.c  list.c  main.c  remove.c
src/change/: change.c
src/core/: README.md  doctor.c  help.c  install.c  list.c  prune.c  remove.c  start.c  status.c  update.c  use.c
src/install/: install.c
src/list/: list.c
src/print/: print.c  print.h
src/remove/: remove.c  remove.h
src/tui/: README.md  handler.c  main_menu.c  tui_render.c
src/utils/: README.md  arch.c  command.c  distro_detection.c  file.c  log.c  print.c  symlink.c
